# agentspaces

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/design/: architecture.md
scripts/: check_version.py
src/agentspaces/: __init__.py  main.py
src/agentspaces/cli/: agent.py  app.py  context.py  docs.py  formatters.py  workspace.py
src/agentspaces/infrastructure/: __init__.py  active.py  claude.py  config.py  design.py  frontmatter.py  git.py  logging.py  metadata.py  naming.py  paths.py  resources.py  similarity.py  skills.py  uv.py
src/agentspaces/modules/agent/: __init__.py  launcher.py
src/agentspaces/modules/workspace/: __init__.py  environment.py  service.py  worktree.py
src/agentspaces/templates/: __init__.py
src/agentspaces/templates/skeleton/: CLAUDE.md  README.md
src/agentspaces/templates/skeleton/.claude/commands/: README.md
src/agentspaces/templates/skeleton/docs/design/: architecture.md
src/agentspaces/templates/skeleton/docs/planning/: deployment.md
src/agentspaces/templates/skills/workspace-context/: SKILL.md
templates/skeleton/: TODO.md
templates/skeleton/.claude/agents/: README.md
templates/skeleton/docs/adr/: 000-template.md  001-example.md
templates/skeleton/docs/design/: architecture.md  development-standards.md
templates/skills/project-standards/: SKILL.md
templates/skills/workspace-context/: SKILL.md
tests/: __init__.py  conftest.py
tests/unit/: test_version_check.py
tests/unit/cli/: test_context.py  test_docs.py  test_formatters.py  test_workspace.py
tests/unit/infrastructure/: test_active.py  test_claude.py  test_config.py  test_design.py  test_frontmatter.py  test_git.py  test_metadata.py  test_naming.py  test_paths.py  test_resources.py  test_similarity.py  test_skills.py  test_uv.py
tests/unit/modules/agent/: test_launcher.py
tests/unit/modules/workspace/: test_environment.py  test_service.py  test_worktree.py
